test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/goto_label.plx
pub fn main(none) i32 {
    jump lbl
    return 0
    label lbl
    return 1
}
