test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/label_outside_function.plx
label lbl
pub fn main(none) i32 {
    return 0
}
